<resources>
    <string name="app_name">Distribución de GLP v1.0</string>
    <string name="titulo_activity_registro">PASO 1. BUSCAR SUJETO</string>
    <string name="titulo_activity_registro_paso2">PASO 2. SELECCIONAR SUJETO</string>
    <string name="titulo_activity_registro_paso3">PASO 3. COMPLETAR INFORMACION </string>
    <string name="titulo_activity_registro_paso4">PASO 4. ACEPTAR TÉRMINOS </string>
    <string name="ok">ACEPTAR</string>


    <string name="opcion_registrar_venta">Vender GLP</string>
    <string name="opcion_editar_venta">Editar Venta</string>
    <string name="opcion_enviar_ventas">Enviar Ventas <b> (ARCH) </b> </string>
    <string name="opcion_actualizar_cupos">Actualizar Cupos <b> (ARCH) </b></string>
    <string name="opcion_historial">Historial Envío Ventas</string>
    <string name="opcion_cambiar_clave">Cambiar Clave</string>
    <string name="opcion_cerrar_sesion">Cerrar Sesión</string>

    <string name="title_activity_cliente_ws">ClienteWSActivity</string>
    <string name="title_activity_cupos">ACTUALIZAR CUPOS</string>
    <string name="title_activity_consulta_venta">ConsultaVentaActivity</string>
    <string name="title_activity_buscar_venta">BuscarVentaActivity</string>
    <string name="title_fragment_enviar_ventas">ENVIAR VENTAS</string>
    <string name="title_fragment_historial_ventas">HISTORIAL VENTAS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_fragment_editar_venta">EDITAR VENTA</string>
    <string name="title_fragment_registrar_venta">REGISTRAR VENTA</string>
    <string name="title_fragment_cambiar_clave">CAMBIAR CLAVE</string>


    <string name="selection">
        Seleccione
    </string>
    <string name="fecha">Fecha</string>
    <string name="numero_registros">Número de registros</string>
    <string name="enviarVentas">Enviar Ventas</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="titulo_historial">Historial de ventas enviadas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="btn_Actualizar">ACTUALIZAR</string>
    <string name="regresar">Regresar</string>
    <string name="hintIdentificacion">Número de Identificación</string>
    <string name="hintUsuario">Ingrese usuario</string>
    <string name="hintIngreseClave">Ingrese la clave</string>
    <string-array name="spinnerDia">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="spinnerMes">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

</resources>
